<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="306dp">

        <requestFocus
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/Frame1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/boton_encender_Frame1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="69dp"
            android:layout_marginTop="24dp"
            android:text="@string/encender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/boton_apagar_Frame1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/apagar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/potencia_interfaz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/interfaz1" />

        <EditText
            android:id="@+id/editTextNumber_Frame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="420dp"
            android:layout_marginTop="35dp"
            android:ems="5"
            android:inputType="number" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/Frame2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Frame1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/boton_encender_Frame2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="69dp"
            android:layout_marginTop="24dp"
            android:text="@string/encender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/boton_apagar_Frame2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/apagar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/potencia_interfaz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/interfaz2" />

        <EditText
            android:id="@+id/editTextNumber_Frame2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="420dp"
            android:layout_marginTop="35dp"
            android:ems="5"
            android:inputType="number" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Frame3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Frame2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/boton_encender_Frame3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="69dp"
            android:layout_marginTop="24dp"
            android:text="@string/encender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/boton_apagar_Frame3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/apagar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/potencia_interfaz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/interfaz3" />

        <EditText
            android:id="@+id/editTextNumber_Frame3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="420dp"
            android:layout_marginTop="35dp"
            android:ems="5"
            android:inputType="number" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Frame3"
        app:layout_constraintBottom_toTopOf="@id/table"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/boton_encender_Frame4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="69dp"
            android:layout_marginTop="24dp"
            android:text="@string/encender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/boton_apagar_Frame4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/apagar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/boton_Configurar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/Configurar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/Grupo" />

    </FrameLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@android:color/black"
        android:gravity="center"
        android:stretchColumns="0,1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="Estado"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cnxStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_centerVertical="true"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="Connect status"
                android:textStyle="normal" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="Mqtt Broker"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/urlBroker"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:text="tcp://192.168.1.37:1883"
                android:textStyle="normal" />
        </TableRow>

        <Button
            android:id="@+id/conectar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="120dp"
            android:text="@string/conectar"
            app:layout_constraintBottom_toTopOf="@+id/table"
            app:layout_constraintStart_toStartOf="parent" />


    </TableLayout>

</android.support.constraint.ConstraintLayout>